# REM

./: Cargo.toml  README.md
crates/rem-cli/: Cargo.toml
crates/rem-core/: Cargo.toml
crates/rem-core/src/: editor.rs  lib.rs  modal.rs  piece_table.rs  selection.rs
crates/rem-core/src/buffer/: piece_table.rs
crates/rem-gui/: Cargo.toml
crates/rem-plugin/: Cargo.toml
crates/rem-rpc/: Cargo.toml
crates/rem-rpc/src/: lib.rs
crates/rem-tui/: Cargo.toml
crates/rem-tui/src/: main.rs
